# CBot

./: .gitignore  CMakeLists.txt  MicrosoftAuth.cpp  README.md  config.hpp  main.cpp
Testing/Temporary/: CTestCostData.txt
examples/: CMakeLists.txt
examples/basic_setup/: CMakeLists.txt  main.cpp
examples/looker/: CMakeLists.txt  main.cpp
examples/multiple_bots/: CMakeLists.txt  main.cpp
scripts/: blocks_parser.py  entities_parser.py  items_parser.py
src/: Block.cpp  Block.hpp  BlockState.cpp  BlockState.hpp  Bot.cpp  Bot.hpp  Chunk.hpp  Constants.hpp  EventBus.cpp  EventBus.hpp  EventType.hpp  Inventory.cpp  Inventory.hpp  InventorySlot.cpp  InventorySlot.hpp  ItemStack.cpp  ItemStack.hpp  MicrosoftAuth.cpp  MicrosoftAuth.hpp  NetworkHandler.cpp  NetworkHandler.hpp  Pathfinder.cpp  Pathfinder.hpp  World.cpp  World.hpp  config.hpp  main.cpp
src/authentication/: FullAuth.cpp  FullAuth.hpp  MCAuth.cpp  MCAuth.hpp  MsaDeviceCode.cpp  MsaDeviceCode.hpp  MsaTokenResponse.cpp  MsaTokenResponse.hpp  SisuAuth.cpp  SisuAuth.hpp  XblDeviceToken.cpp  XblDeviceToken.hpp
src/conversions/: BlockEntity.hpp  ChunkData.hpp  ChunkPos.hpp  ChunkSection.hpp  Conversion.hpp  DataPack.hpp  Heightmap.hpp  IDOrX.hpp  MCString.hpp  NBT.cpp  NBT.hpp  PalettedContainer.hpp  PlayerTabActions.hpp  Position.hpp  PrefixedArray.hpp  RegistryEntry.hpp  Slot.hpp  StandardTypes.hpp  StructuredComponents.cpp  StructuredComponents.hpp  TeleportFlags.hpp  TextComponent.cpp  TextComponent.hpp  Trim.hpp  UUID.hpp  Utils.hpp  VarInt.hpp
src/conversions/StructuredComponents/: EnchantmentComponent.hpp  FireworkComponent.hpp  StructuredComponents.cpp  StructuredComponents.hpp  TrimComponent.hpp
src/events/: BlockUpdateEvent.cpp  BlockUpdateEvent.hpp  ChunkDataEvent.hpp  DisconnectEvent.cpp  DisconnectEvent.hpp  PlayerJoinEvent.hpp  PlayerLeaveEvent.hpp  TickEvent.cpp  TickEvent.hpp
src/libs/: nbt.hpp
src/math/: AngleHelper.hpp  BlockPos.hpp  Box.cpp  Box.hpp  Physics.hpp  Vec3.hpp
src/packets/: ClientboundPacket.hpp  Handshake.hpp  Packet.hpp  ServerboundPacket.hpp
src/packets/configuration/: AcknowledgeFinishConfigurationC2SPacket.cpp  AcknowledgeFinishConfigurationC2SPacket.hpp  FinishConfigurationS2CPacket.cpp  FinishConfigurationS2CPacket.hpp  KnownPacksC2SPacket.cpp  KnownPacksC2SPacket.hpp  KnownPacksS2CPacket.cpp  KnownPacksS2CPacket.hpp  RegistryDataS2CPacket.cpp  RegistryDataS2CPacket.hpp
src/packets/configuration/clientbound/: ConfigurationDisconnectS2CPacket.cpp  ConfigurationDisconnectS2CPacket.hpp  FinishConfigurationS2CPacket.cpp  FinishConfigurationS2CPacket.hpp  KnownPacksS2CPacket.cpp  KnownPacksS2CPacket.hpp  RegistryDataS2CPacket.cpp  RegistryDataS2CPacket.hpp  UpdateTagsS2CPacket.cpp  UpdateTagsS2CPacket.hpp
src/packets/configuration/serverbound/: AcknowledgeFinishConfigurationC2SPacket.cpp  KnownPacksC2SPacket.cpp
src/packets/handshaking/: HandshakeC2SPacket.cpp  HandshakeC2SPacket.hpp
src/packets/login/: EncryptionRequestS2CPacket.cpp  EncryptionRequestS2CPacket.hpp  EncryptionResponseC2SPacket.cpp  EncryptionResponseC2SPacket.hpp  LoginAcknowledgedC2SPacket.cpp  LoginAcknowledgedC2SPacket.hpp  LoginStartC2SPacket.cpp  LoginStartC2SPacket.hpp  LoginSuccessS2CPacket.cpp  LoginSuccessS2CPacket.hpp  SetCompressionS2CPacket.cpp  SetCompressionS2CPacket.hpp
src/packets/login/clientbound/: EncryptionRequestS2CPacket.cpp  EncryptionRequestS2CPacket.hpp  LoginDisconnectS2CPacket.cpp  LoginDisconnectS2CPacket.hpp  LoginSuccessS2CPacket.cpp  LoginSuccessS2CPacket.hpp  SetCompressionS2CPacket.cpp  SetCompressionS2CPacket.hpp
src/packets/login/serverbound/: EncryptionResponseC2SPacket.cpp  EncryptionResponseC2SPacket.hpp  LoginAcknowledgedC2SPacket.cpp  LoginStartC2SPacket.cpp
src/packets/play/: AcknowledgeConfigurationC2SPacket.cpp  AcknowledgeConfigurationC2SPacket.hpp  BlockUpdateS2CPacket.cpp  ChunkDataS2CPacket.cpp  ChunkDataS2CPacket.hpp  ConfirmTeleportationC2SPacket.cpp  DisconnectS2CPacket.cpp  KeepAliveC2SPacket.cpp  KeepAliveC2SPacket.hpp  KeepAliveS2CPacket.cpp  KeepAliveS2CPacket.hpp  LoginS2CPacket.cpp  LoginS2CPacket.hpp  PingS2CPacket.cpp  PingS2CPacket.hpp  PlayerAbilitiesS2CPacket.cpp  PlayerAbilitiesS2CPacket.hpp  PongC2SPacket.cpp  PongC2SPacket.hpp  SetHealthS2CPacket.cpp  SetHeldItemS2CPacket.cpp  SetHeldItemS2CPacket.hpp  SetPlayerPositionRotationC2SPacket.cpp  SetPlayerPositionRotationC2SPacket.hpp  SetPlayerRotationC2SPacket.cpp  SetPlayerRotationC2SPacket.hpp  StartConfigurationS2CPacket.cpp  StartConfigurationS2CPacket.hpp  SwingArmC2SPacket.cpp  SwingArmC2SPacket.hpp  SynchronizePlayerPositionS2CPacket.cpp  SynchronizePlayerPositionS2CPacket.hpp
src/packets/play/clientbound/: BlockUpdateS2CPacket.cpp  BlockUpdateS2CPacket.hpp  ChunkDataS2CPacket.cpp  ChunkDataS2CPacket.hpp  DisconnectS2CPacket.cpp  DisconnectS2CPacket.hpp  GameEventS2CPacket.cpp  GameEventS2CPacket.hpp  KeepAliveS2CPacket.cpp  KeepAliveS2CPacket.hpp  LoginS2CPacket.cpp  LoginS2CPacket.hpp  PingS2CPacket.cpp  PingS2CPacket.hpp  PlayerAbilitiesS2CPacket.cpp  PlayerAbilitiesS2CPacket.hpp  PlayerInfoRemoveS2CPacket.cpp  PlayerInfoRemoveS2CPacket.hpp  PlayerInfoUpdateS2CPacket.cpp  PlayerInfoUpdateS2CPacket.hpp  SetContainerContentS2CPacket.cpp  SetContainerContentS2CPacket.hpp  SetDefaultSpawnPositionS2CPacket.cpp  SetDefaultSpawnPositionS2CPacket.hpp  SetHealthS2CPacket.cpp  SetHealthS2CPacket.hpp  SetHeldItemS2CPacket.cpp  SetHeldItemS2CPacket.hpp  SetRenderDistanceS2CPacket.cpp  SetRenderDistanceS2CPacket.hpp  SetTabHeaderFooterS2CPacket.cpp  SetTabHeaderFooterS2CPacket.hpp  SpawnEntityS2CPacket.cpp  SpawnEntityS2CPacket.hpp  StartConfigurationS2CPacket.cpp  StartConfigurationS2CPacket.hpp  SynchronizePlayerPositionS2CPacket.cpp  (+11 more)
src/registry/: BlockFace.hpp  BlockRegistry.cpp  BlockRegistry.hpp  BlockRegistryGenerated.hpp  EntityRegistryGenerated.hpp  Gamemode.hpp  ItemRegistryGenerated.hpp  PacketRegistry.cpp  PacketRegistry.hpp
src/utils/: Base64.hpp  Crypto.cpp  Crypto.hpp  JSON.hpp  Time.hpp  WebRequests.cpp  WebRequests.hpp
tests/: CMakeLists.txt  tests.cpp
(+33 files in other folders)
